--- a/index.html
+++ b/index.html
@@ -1,26 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>CoreFlux Simpits — One Rig. Infinite Worlds.</title>
-<meta name="description" content="One Rig. All Roles. Transform in minutes from workstation to FPS, racing sim, or full-flight cockpit. Motion-capable or silent static. No drilling. Apartment safe." />
-<link rel="icon" href="assets/images/coreflux-logo.png" />
-<link rel="canonical" href="https://access-mark.github.io/CoreFlux-Simpits/" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="CoreFlux Simpits — One Rig. Infinite Worlds." />
-<meta property="og:description" content="Transform in minutes from workstation to FPS, racing sim, or full-flight cockpit. Motion-capable or silent static. Precision aluminium. No drilling. Living-room ready." />
-<meta property="og:image" content="assets/images/Top%20View.png" />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <title>CoreFlux Simpits — One Rig. All Roles. Flight, Racing, FPS, Work.</title>
+
+  <meta name="description" content="CoreFlux Simpits: motion-ready aluminium sim rigs for racing, flight, FPS, and work. Static or Dynamic actuator-ready chassis. Triple/quad monitor support, HOTAS, direct-drive wheels, loadcell brake stability. Switch roles in under 5 minutes." />
+
+  <link rel="canonical" href="https://access-mark.github.io/CoreFlux-Simpits/" />
+  <link rel="icon" href="assets/images/coreflux-logo.png" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="CoreFlux Simpits — One Rig. Infinite Worlds." />
+  <meta property="og:description" content="From workstation to racing cockpit to full HOTAS flight deck in minutes. Static or motion-capable, apartment-safe footprint." />
+  <meta property="og:image" content="assets/images/frame-left.png" />
+  <meta property="og:url" content="https://access-mark.github.io/CoreFlux-Simpits/" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="CoreFlux Simpits — One Rig. Infinite Worlds." />
+  <meta name="twitter:description" content="Direct-drive racing, HOTAS flight, FPS aim stability, plus full workstation ergonomics — all in one chassis." />
+  <meta name="twitter:image" content="assets/images/frame-right.png" />
+
+  <meta name="keywords" content="simpit, sim rig, racing simulator cockpit, flight sim cockpit, HOTAS mount, direct drive wheel rig, loadcell pedal mount, motion platform ready, triple monitor sim, actuator ready simpit, Star Citizen cockpit, DCS cockpit, ACC rig, iRacing rig, home cockpit setup, CoreFlux Simpits" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "CoreFlux Simpits",
+    "brand": {
+      "@type": "Brand",
+      "name": "CoreFlux"
+    },
+    "manufacturer": {
+      "@type": "Organization",
+      "name": "CoreFlux (Pty) Ltd",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Sandton",
+        "addressRegion": "Johannesburg",
+        "addressCountry": "South Africa"
+      },
+      "telephone": "+27 11 568 8667",
+      "email": "sales@coreflux.co.za"
+    },
+    "description": "One modular aluminium cockpit that swaps between work desk, racing sim (direct drive + loadcell), HOTAS flight deck, and FPS/tactical layout. Static frame or Dynamic actuator-ready motion frame.",
+    "keywords": [
+      "racing simulator cockpit",
+      "flight sim HOTAS mount",
+      "Star Citizen dual stick rig",
+      "iRacing direct drive frame",
+      "DCS World motion platform",
+      "Sim racing chassis South Africa"
+    ],
+    "url": "https://access-mark.github.io/CoreFlux-Simpits/",
+    "image": [
+      "assets/images/frame-left.png",
+      "assets/images/frame-right.png"
+    ]
+  }
+  </script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+
+  <link rel="preload" as="image" href="assets/images/frame-left.png">
+  <link rel="preload" as="image" href="assets/images/frame-right.png">
+  <link rel="preload" as="image" href="assets/images/coreflux-logo.png">
 
 <style>
 /* ======================================================
-   CoreFlux Simpits — Production CSS (Next Level Atlas)
-   - Taller nav banner, centered lockup text
-   - Brand left / CTA right pulled in to wrap width
-   - No nav pills
-   - Hero mock: always fill (cover), only 2 slides
-   - Fit/Fill toggle now cosmetic/no-op
+   CoreFlux Simpits — Production CSS
+   - Nav: brand left / CTA right / lockup center
+   - Mobile nav stacks clean
+   - Hero mock: always fill, 2 slides
+   - SEO-preload done in <head>
    ====================================================== */
 
 /* ---- Tokens ---- */
@@ -111,12 +165,23 @@ section{ padding:48px 0; position:relative; z-index:1; }
 }
 .nav__inner{
   display:flex;
-  align-items:center;
-  justify-content:space-between;
-  width:min(var(--content-max),92vw); /* <- pull in edges */
+  flex-direction:column;
+  align-items:stretch;
+  justify-content:flex-start;
+
+  width:min(var(--content-max),92vw);
   margin:0 auto;
   height:100%;
   padding:0;
+  gap:12px;
+}
+
+/* Top row (desktop will still look fine in flex) */
+.nav__row-top{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  width:100%;
 }
 
 /* LEFT: LOGO */
@@ -135,7 +200,7 @@ section{ padding:48px 0; position:relative; z-index:1; }
   display:block;
 }
 
-/* CENTER: LOCKUP (now hero identity, double size ask) */
+/* CENTER: LOCKUP */
 .brand__center{
   text-align:center;
   line-height:1.05;
@@ -145,10 +210,11 @@ section{ padding:48px 0; position:relative; z-index:1; }
   justify-content:center;
   min-width:0;
   max-width:60%;
+  margin:0 auto;
 }
 .brand__tagline{
   font-weight:800;
-  font-size:2.5rem; /* bumped */
+  font-size:2.5rem;
   line-height:1.1;
   letter-spacing:-.03em;
   background:linear-gradient(90deg,#cfe9ff 0%, #7fd3ff 55%, #ffe189 100%);
@@ -162,7 +228,7 @@ section{ padding:48px 0; position:relative; z-index:1; }
 }
 .brand__name{
   font-weight:900;
-  font-size:2.5rem; /* bumped */
+  font-size:2.5rem;
   line-height:1.1;
   color:var(--text);
   letter-spacing:-.03em;
@@ -342,7 +408,7 @@ section{ padding:48px 0; position:relative; z-index:1; }
 }
 
 /* ======================================================
-   HERO MOCK (carousel) — 2 slides, always fill
+   HERO MOCK — 2 slides, always fill cover
    ====================================================== */
 .mock-wrap{ position:relative }
 #mockGlow.mock-glow{
@@ -368,7 +434,7 @@ section{ padding:48px 0; position:relative; z-index:1; }
   z-index:1;
 }
 
-/* always cover */
+/* force cover fill */
 .mock__slide{
   position:absolute;
   inset:0;
@@ -857,35 +923,92 @@ aside.panel{
    RESPONSIVE
    ====================================================== */
 
+/* tablet-ish */
 @media (max-width:1080px){
   .hero{ grid-template-columns:1fr }
   .mock{ height:400px; max-height:400px }
 }
+
+/* under 980: 1col cards, tweak statbar */
 @media (max-width:980px){
   .statbar{ grid-template-columns:repeat(2,1fr) }
   .cards{ grid-template-columns:1fr }
   :root{ --logo-h:46px }
   .brand__center{ max-width:100%; }
 }
+
+/* phone layout */
 @media (max-width:520px){
-  .brand__logo-img{
-    height:80px;
-    max-height:80px;
+  .nav{
+    --nav-h:180px;
+    height:var(--nav-h);
+    padding-top:12px;
+    padding-bottom:12px;
   }
+
+  .nav__inner{
+    flex-direction:column;
+    align-items:stretch;
+    justify-content:flex-start;
+    gap:12px;
+  }
+
+  .nav__row-top{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    width:100%;
+  }
+
+  .brand,
+  .nav__cta-wrap{
+    display:flex;
+    align-items:center;
+  }
+
+  .brand__center{
+    order:3;
+    max-width:100%;
+    text-align:center;
+    align-items:center;
+  }
+
+  .brand__logo-img{
+    height:72px;
+    max-height:72px;
+  }
+
   .brand__tagline,
   .brand__name{
-    font-size:1.6rem;
+    font-size:1.4rem;
     line-height:1.15;
   }
+
   .brand__subline{
     font-size:.7rem;
+    margin-top:8px;
   }
-  .nav{
-    --nav-h:140px;
+
+  .cta{
+    font-size:.8rem;
+    padding:10px 14px;
+    border-radius:10px;
   }
+
+  .hero{
+    padding-top:48px;
+  }
+
+  .mock{
+    height:320px;
+    max-height:320px;
+  }
+
+  .statbar{ grid-template-columns:repeat(2,1fr); }
+
   .config-summary{
     flex-direction:column;
-    align-items:flex-start
+    align-items:flex-start;
   }
 }
 </style>
@@ -900,22 +1023,26 @@ aside.panel{
 
 <nav class="nav" aria-label="Primary">
   <div class="nav__inner">
-    <!-- left: logo -->
-    <div class="brand" aria-label="CoreFlux">
-      <img class="brand__logo-img" src="assets/images/coreflux-logo.png" alt="CoreFlux logo">
+
+    <div class="nav__row-top">
+      <!-- left: logo -->
+      <div class="brand" aria-label="CoreFlux">
+        <img class="brand__logo-img" src="assets/images/coreflux-logo.png" alt="CoreFlux logo">
+      </div>
+
+      <!-- right: CTA -->
+      <div class="nav__cta-wrap">
+        <a class="cta" href="#reserve">Reserve Access</a>
+      </div>
     </div>
 
-    <!-- center: main lockup -->
+    <!-- center lockup -->
     <div class="brand__center">
       <div class="brand__tagline">One Rig. All Roles.</div>
       <div class="brand__name">CoreFlux Simpits</div>
       <div class="brand__subline">Pilot Batch #1 now forming</div>
     </div>
 
-    <!-- right: CTA -->
-    <div class="nav__cta-wrap">
-      <a class="cta" href="#reserve">Reserve Access</a>
-    </div>
   </div>
 </nav>
 
@@ -958,7 +1085,7 @@ aside.panel{
     <div class="mock" id="mock" aria-label="Rig views">
       <button class="mock__toggle" id="fitToggle" type="button" aria-pressed="true">Fill</button>
 
-      <!-- ONLY TWO SLIDES NOW, UPDATED FILENAMES -->
+      <!-- 2 slides -->
       <img class="mock__slide active" src="assets/images/frame-left.png" alt="CoreFlux frame left view, actuator-ready bracing">
       <img class="mock__slide" src="assets/images/frame-right.png" alt="CoreFlux frame right view, control mounts and seating position">
 
@@ -1410,7 +1537,6 @@ aside.panel{
     </article>
   </div>
 
-  <!-- proof photo -->
   <div class="panel" style="margin-top:16px;display:flex;flex-wrap:wrap;gap:16px;align-items:flex-start">
     <div style="flex:2 1 260px;min-width:240px">
       <img src="assets/images/Quad%20Monitor%20Stand%20(2).jpg" alt="CoreFlux rig running curved triple setup plus overhead HUD monitor" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border);box-shadow:var(--shadow);background:#000;">
@@ -1725,7 +1851,6 @@ aside.panel{
   </div>
 </footer>
 
-
 <script>
 /* Footer year */
 document.getElementById('year').textContent = new Date().getFullYear();
@@ -1986,7 +2111,7 @@ Setup notes / hardware (optional, fill in before send):
 - Anything we should know (desk space, neighbors, etc.):`
     );
 
-    // CHANGE THIS to your inbox
+    // TODO: change to real inbox before going live
     const dest = "team@coreflux.fake";
 
     window.location.href = `mailto:${dest}?subject=${subject}&body=${body}`;
@@ -2048,7 +2173,7 @@ Setup notes / hardware (optional, fill in before send):
       for(let j=i+1;j<pts.length;j++){
         const b = pts[j];
         const dx = a.x - b.x, dy = a.y - b.y, d2 = dx*dx + dy*dy;
-        if(d2 < LINK_DIST*LINK_DIST){
+        if(d2 < LINK_DIST*LINKDIST){
           const d = Math.sqrt(d2);
           const alpha = 1 - d / LINK_DIST;
           ctx.globalAlpha = alpha * 0.25;
