--- a/index.html
+++ b/index.html
@@ -1523,7 +1523,9 @@ aside.panel{
   <p class="lede" style="max-width:800px">
     We ship pre-drilled plates to match these ecosystems. No adapters. No guesswork. Bolt it on, tighten it down, fly / drive.
   </p>
+
   <div class="cards" style="margin-top:14px">
+    <!-- Virpil -->
     <article class="card" style="border:1px solid rgba(0,198,255,.45);box-shadow:0 24px 60px rgba(0,198,255,.25),0 0 60px rgba(0,198,255,.2)">
       <h3>Virpil Controls</h3>
       <p class="lede">Constellation Alpha / Prime • MongoosT-50CM • VMAX Prime • ACE pedals</p>
@@ -1533,6 +1535,8 @@ aside.panel{
         <li>Ready for dual-stick space / heli layouts</li>
       </ul>
     </article>
+
+    <!-- VKB -->
     <article class="card" style="border:1px solid rgba(255,210,63,.45);box-shadow:0 24px 60px rgba(255,210,63,.22),0 0 60px rgba(255,210,63,.18)">
       <h3>VKB Controllers</h3>
       <p class="lede">Gladiator / NXT / EVO • STECS throttle</p>
@@ -1542,6 +1546,8 @@ aside.panel{
         <li>Swaps from “desk height” to “cockpit height” fast</li>
       </ul>
     </article>
+
+    <!-- Moza -->
     <article class="card" style="border:1px solid rgba(0,198,255,.4);box-shadow:0 24px 60px rgba(0,198,255,.22),0 0 60px rgba(0,198,255,.18)">
       <h3>Moza Racing</h3>
       <p class="lede">R-series direct drive bases • QR hubs</p>
@@ -1551,6 +1557,8 @@ aside.panel{
         <li>Pedal base braced for full loadcell pressure</li>
       </ul>
     </article>
+
+    <!-- Fanatec -->
     <article class="card" style="border:1px solid rgba(255,210,63,.4);box-shadow:0 24px 60px rgba(255,210,63,.22),0 0 60px rgba(255,210,63,.18)">
       <h3>Fanatec</h3>
       <p class="lede">Podium / ClubSport / CSL DD • QR2 ecosystem</p>
@@ -1560,7 +1568,30 @@ aside.panel{
         <li>Stays aligned even under actuator surge</li>
       </ul>
     </article>
+
+    <!-- Simucube -->
+    <article class="card" style="border:1px solid rgba(0,198,255,.45);box-shadow:0 24px 60px rgba(0,198,255,.25),0 0 60px rgba(0,198,255,.2)">
+      <h3>Simucube</h3>
+      <p class="lede">Sport / Pro / Ultimate direct drive bases</p>
+      <ul>
+        <li>High-torque DD mounting supported by reinforced wheel arm</li>
+        <li>Column flex and twist controlled under peak Nm</li>
+        <li>Indexed seating + pedal rail keeps driving position identical session to session</li>
+      </ul>
+    </article>
+
+    <!-- Logitech -->
+    <article class="card" style="border:1px solid rgba(255,210,63,.45);box-shadow:0 24px 60px rgba(255,210,63,.22),0 0 60px rgba(255,210,63,.18)">
+      <h3>Logitech</h3>
+      <p class="lede">Pro Wheel / Pro Pedals • G-series</p>
+      <ul>
+        <li>Mount points for Logitech Pro Wheel and legacy G wheels</li>
+        <li>Loadcell-style brake force captured by pedal plate instead of sliding across the floor</li>
+        <li>Shifter / handbrake placement on adjustable side arm</li>
+      </ul>
+    </article>
   </div>
+
   <div class="panel" style="margin-top:24px;text-align:center">
     <div style="font-size:.8rem;line-height:1.4;font-weight:600;color:var(--text)">
       Running something else?<br>We cut customs. Send your bolt pattern in Reserve and we’ll plate it.
