--- a/index.html
+++ b/index.html
@@ -1572,11 +1572,11 @@ aside.panel{
     <!-- Simucube -->
     <article class="card" style="border:1px solid rgba(0,198,255,.45);box-shadow:0 24px 60px rgba(0,198,255,.25),0 0 60px rgba(0,198,255,.2)">
       <h3>Simucube</h3>
-      <p class="lede">Sport / Pro / Ultimate direct drive bases</p>
+      <p class="lede">Sport / Pro / Ultimate direct drive wheel bases</p>
       <ul>
-        <li>High-torque DD mounting supported by reinforced wheel arm</li>
+        <li>High-torque DD mounting into reinforced wheel arm</li>
         <li>Column flex and twist controlled under peak Nm</li>
-        <li>Indexed seating + pedal rail keeps driving position identical session to session</li>
+        <li>Pedal + seat index lets you return to the same driving position every stint</li>
       </ul>
     </article>
 
@@ -1590,6 +1590,17 @@ aside.panel{
         <li>Shifter / handbrake placement on adjustable side arm</li>
       </ul>
     </article>
+
+    <!-- Tobii -->
+    <article class="card" style="border:1px solid rgba(0,198,255,.4);box-shadow:0 24px 60px rgba(0,198,255,.22),0 0 60px rgba(0,198,255,.18)">
+      <h3>Tobii Eye Tracking</h3>
+      <p class="lede">Head / eye tracking for flight, space, and sim racing</p>
+      <ul>
+        <li>Mounting locations planned for clean, no-drill Tobii placement on the frame</li>
+        <li>Natural head-look in DCS, MSFS, Star Citizen — check six, glance at MFDs, scan instruments</li>
+        <li>Immersion and situational awareness without wearing VR</li>
+      </ul>
+    </article>
   </div>
 
   <div class="panel" style="margin-top:24px;text-align:center">
@@ -1598,6 +1609,7 @@ aside.panel{
     </div>
   </div>
 </section>
+
 
 <!-- TUNING -->
 <section id="tuning" class="wrap">
