--- a/index.html
+++ b/index.html
@@ -1515,6 +1515,7 @@ aside.panel{
 </section>
 
 <!-- VENDORS -->
+<!-- VENDORS -->
 <section id="vendors" class="wrap">
   <div class="section__head">
     <h2 class="section__title">Preferred Control Vendors</h2>
@@ -1547,6 +1548,17 @@ aside.panel{
       </ul>
     </article>
 
+    <!-- Thrustmaster (NEW) -->
+    <article class="card" style="border:1px solid rgba(0,198,255,.4);box-shadow:0 24px 60px rgba(0,198,255,.22),0 0 60px rgba(0,198,255,.18)">
+      <h3>Thrustmaster</h3>
+      <p class="lede">Warthog • TCA Airbus / Boeing • TPR pedals • T818 DD wheel base</p>
+      <ul>
+        <li>Support for HOTAS, yokes, throttles, rudder pedals</li>
+        <li>Mounting for flight and racing hardware in the same footprint</li>
+        <li>Pre-drilled plates = no desk clamps, no flex</li>
+      </ul>
+    </article>
+
     <!-- Moza -->
     <article class="card" style="border:1px solid rgba(0,198,255,.4);box-shadow:0 24px 60px rgba(0,198,255,.22),0 0 60px rgba(0,198,255,.18)">
       <h3>Moza Racing</h3>
@@ -1555,6 +1567,17 @@ aside.panel{
         <li>4-bolt DD pattern captured in reinforced wheel arm</li>
         <li>Holds torque without column wobble</li>
         <li>Pedal base braced for full loadcell pressure</li>
+      </ul>
+    </article>
+
+    <!-- Simagic (NEW) -->
+    <article class="card" style="border:1px solid rgba(255,210,63,.45);box-shadow:0 24px 60px rgba(255,210,63,.22),0 0 60px rgba(255,210,63,.18)">
+      <h3>Simagic</h3>
+      <p class="lede">Alpha / Alpha Mini direct drive bases • GT & Formula rims • hydraulic pedals</p>
+      <ul>
+        <li>Rigid wheel mount for high-torque DD bases</li>
+        <li>Pedal tray supports high-pressure hydraulic / loadcell braking</li>
+        <li>Side-mount support for handbrake / sequential shifter</li>
       </ul>
     </article>
 
@@ -1569,104 +1592,23 @@ aside.panel{
       </ul>
     </article>
 
-    <!-- Simucube -->
-    <article class="card" style="border:1px solid rgba(0,198,255,.45);box-shadow:0 24px 60px rgba(0,198,255,.25),0 0 60px rgba(0,198,255,.2)">
-      <h3>Simucube</h3>
-      <p class="lede">Sport / Pro / Ultimate direct drive wheel bases</p>
-      <ul>
-        <li>High-torque DD mounting into reinforced wheel arm</li>
-        <li>Column flex and twist controlled under peak Nm</li>
-        <li>Pedal + seat index lets you return to the same driving position every stint</li>
-      </ul>
-    </article>
-
-    <!-- Logitech -->
-    <article class="card" style="border:1px solid rgba(255,210,63,.45);box-shadow:0 24px 60px rgba(255,210,63,.22),0 0 60px rgba(255,210,63,.18)">
-      <h3>Logitech</h3>
-      <p class="lede">Pro Wheel / Pro Pedals • G-series</p>
-      <ul>
-        <li>Mount points for Logitech Pro Wheel and legacy G wheels</li>
-        <li>Loadcell-style brake force captured by pedal plate instead of sliding across the floor</li>
-        <li>Shifter / handbrake placement on adjustable side arm</li>
-      </ul>
-    </article>
-
     <!-- Tobii -->
-    <article class="card" style="border:1px solid rgba(0,198,255,.4);box-shadow:0 24px 60px rgba(0,198,255,.22),0 0 60px rgba(0,198,255,.18)">
+    <article class="card" style="border:1px solid rgba(0,198,255,.45);box-shadow:0 24px 60px rgba(0,198,255,.25),0 0 60px rgba(0,198,255,.2)">
       <h3>Tobii Eye Tracking</h3>
-      <p class="lede">Head / eye tracking for flight, space, and sim racing</p>
+      <p class="lede">Tobii Eye Tracker 5 / Horizon</p>
       <ul>
-        <li>Mounting locations planned for clean, no-drill Tobii placement on the frame</li>
-        <li>Natural head-look in DCS, MSFS, Star Citizen — check six, glance at MFDs, scan instruments</li>
-        <li>Immersion and situational awareness without wearing VR</li>
+        <li>Mount point for Tobii at correct sightline height</li>
+        <li>Natural head/eye aim in flight and space sim cockpits</li>
+        <li>Hands stay on HOTAS / wheel — camera follows you</li>
       </ul>
     </article>
   </div>
 
   <div class="panel" style="margin-top:24px;text-align:center">
     <div style="font-size:.8rem;line-height:1.4;font-weight:600;color:var(--text)">
-      Running something else?<br>We cut customs. Send your bolt pattern in Reserve and we’ll plate it.
+      Running something else?<br>
+      We cut customs. Send your bolt pattern in Reserve and we’ll plate it.
     </div>
-  </div>
-</section>
-
-
-<!-- TUNING -->
-<section id="tuning" class="wrap">
-  <div class="section__head">
-    <h2 class="section__title">Performance Tuning</h2>
-    <span class="pill">Lock comfort, unlock pace</span>
-  </div>
-  <div class="cards" style="margin-top:14px">
-    <article class="card">
-      <h3>Seat & Reach</h3>
-      <p class="lede">Posture that lasts all night.</p>
-      <ul>
-        <li>Seat back: 95–105°; hips slightly below knees</li>
-        <li>Knees: ~110° racing; ~100–110° flight</li>
-        <li>Arms: 15–30° bend at full lock / stick deflection</li>
-      </ul>
-    </article>
-    <article class="card">
-      <h3>Wheel / Yoke / Stick</h3>
-      <p class="lede">Precision beats strength.</p>
-      <ul>
-        <li>Wheel/yoke top ≈ at or just below shoulder height</li>
-        <li>Center-stick between knees; elbow ≈ 90° at neutral</li>
-      </ul>
-    </article>
-    <article class="card">
-      <h3>Pedals</h3>
-      <p class="lede">Control without cramp.</p>
-      <ul>
-        <li>Racing: knee 110–120°, ankle 15–30° at rest</li>
-        <li>Flight: heels supported; avoid toe-only posture</li>
-      </ul>
-    </article>
-    <article class="card">
-      <h3>Screen & FOV</h3>
-      <p class="lede">Clarity without motion sickness.</p>
-      <ul>
-        <li>Top bezel ≈ eye height; center ~15° below</li>
-        <li>Triples 45–60°; true scale over “super wide”</li>
-      </ul>
-    </article>
-    <article class="card">
-      <h3>Input Curves</h3>
-      <p class="lede">Smooth center, control at edge.</p>
-      <ul>
-        <li>Flight: curve 15–25; deadzone 2–3%</li>
-        <li>Brake: linear or mild progressive</li>
-      </ul>
-    </article>
-    <article class="card">
-      <h3>VR Notes</h3>
-      <p class="lede">Comfort first, frames second.</p>
-      <ul>
-        <li>Dial IPD physically, then fine-tune in software</li>
-        <li>Enable reprojection if FPS dips</li>
-      </ul>
-    </article>
   </div>
 </section>
 
